--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-5.28MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.01MB/s(Youtube:不良林), server: 54.36.174.181, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇨🇳 中国-3.32MB/s(Youtube:不良林), server: 116.63.103.11, port: 45758, type: vmess, uuid: 311e647a-c835-492a-b685-b159c0c78683, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.63.103.11}}
-  - {name: 🇨🇳 中国-3.80MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.27MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
+  - {name: 🇯🇵 日本-211.6KB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-3.43MB/s(Youtube:不良林), server: 85.208.108.60, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇳 中国-1.42MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.30MB/s(Youtube:不良林), server: 54.36.174.181, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-2.33MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
   - {name: 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
   - {name: 🇨🇳 中国-5.05MB/s(Youtube:不良林), server: cmjm.julvab.com, port: 30718, type: ssr, cipher: chacha20-ietf, password: download.microso, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 4576:Y0G6hg, obfs-param: fc9ba4576.download.microsoft.com}
+  - {name: 🇰🇷 韩国-764.4KB/s(Youtube:不良林), server: 146.56.110.129, port: 26396, type: vmess, uuid: f4baed1c-ab86-4b70-caa3-df853467e1bd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.15MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.51MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.05MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-764.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-5.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.05MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-764.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.05MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-764.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-5.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.05MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-764.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.05MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-764.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.05MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-764.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.05MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-764.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
