--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-211.6KB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇯🇵 日本-3.43MB/s(Youtube:不良林), server: 85.208.108.60, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇳 中国-1.42MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.30MB/s(Youtube:不良林), server: 54.36.174.181, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-2.33MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-1.76MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-162.8KB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇳 中国-411.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-461.8KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇨🇳 中国-272.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇨🇳 中国-5.05MB/s(Youtube:不良林), server: cmjm.julvab.com, port: 30718, type: ssr, cipher: chacha20-ietf, password: download.microso, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 4576:Y0G6hg, obfs-param: fc9ba4576.download.microsoft.com}
   - {name: 🇰🇷 韩国-764.4KB/s(Youtube:不良林), server: 146.56.110.129, port: 26396, type: vmess, uuid: f4baed1c-ab86-4b70-caa3-df853467e1bd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-2.15MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.51MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 柬埔寨-1.64MB/s(Youtube:不良林), server: kh1.nodegz.top, port: 444, type: trojan, password: c85f1706-0e63-46bf-8f05-3a2b95b5ba3c, sni: kh1.nodegz.top, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-211.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇯🇵 日本-162.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-461.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-272.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.05MB/s(Youtube:不良林)
       - 🇰🇷 韩国-764.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 柬埔寨-1.64MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-211.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇯🇵 日本-162.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-461.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-272.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.05MB/s(Youtube:不良林)
       - 🇰🇷 韩国-764.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 柬埔寨-1.64MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-211.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇯🇵 日本-162.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-461.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-272.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.05MB/s(Youtube:不良林)
       - 🇰🇷 韩国-764.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 柬埔寨-1.64MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-211.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇯🇵 日本-162.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-461.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-272.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.05MB/s(Youtube:不良林)
       - 🇰🇷 韩国-764.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 柬埔寨-1.64MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-211.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇯🇵 日本-162.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-461.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-272.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.05MB/s(Youtube:不良林)
       - 🇰🇷 韩国-764.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 柬埔寨-1.64MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-211.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇯🇵 日本-162.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-461.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-272.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.05MB/s(Youtube:不良林)
       - 🇰🇷 韩国-764.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 柬埔寨-1.64MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-211.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇯🇵 日本-162.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-461.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-272.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.05MB/s(Youtube:不良林)
       - 🇰🇷 韩国-764.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 柬埔寨-1.64MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
