--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.14MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇫🇷 法国-245.6KB/s(Youtube:不良林), server: 54.36.174.181, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇨🇳 中国-4.94MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-615.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 柬埔寨-1.64MB/s(Youtube:不良林), server: kh1.nodegz.top, port: 444, type: trojan, password: c85f1706-0e63-46bf-8f05-3a2b95b5ba3c, sni: kh1.nodegz.top, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-416.6KB/s(Youtube:不良林), server: 54.36.174.181, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇫🇷 法国-487.4KB/s(Youtube:不良林), server: 54.36.174.181, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇫🇷 法国-567.5KB/s(Youtube:不良林), server: 54.36.174.181, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇫🇷 法国-870.1KB/s(Youtube:不良林), server: 54.36.174.181, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇳 中国-4.19MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-349.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.07MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-985.6KB/s(Youtube:不良林), server: 54.36.174.181, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-1.96MB/s(Youtube:不良林), server: 85.208.108.59, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇫🇷 法国-1.07MB/s(Youtube:不良林), server: 54.36.174.181, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 捷克-1.37MB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇦🇺 澳大利亚-1.91MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
+  - {name: 🇺🇸 美国-2.96MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-539.9KB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-245.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-615.8KB/s(Youtube:不良林)
-      - 柬埔寨-1.64MB/s(Youtube:不良林)
-      - 🇫🇷 法国-416.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-487.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-567.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-870.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
+      - 🇫🇷 法国-985.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
       - 捷克-1.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-539.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-245.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-615.8KB/s(Youtube:不良林)
-      - 柬埔寨-1.64MB/s(Youtube:不良林)
-      - 🇫🇷 法国-416.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-487.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-567.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-870.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
+      - 🇫🇷 法国-985.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
       - 捷克-1.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-539.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-245.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-615.8KB/s(Youtube:不良林)
-      - 柬埔寨-1.64MB/s(Youtube:不良林)
-      - 🇫🇷 法国-416.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-487.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-567.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-870.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
+      - 🇫🇷 法国-985.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
       - 捷克-1.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-539.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-245.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-615.8KB/s(Youtube:不良林)
-      - 柬埔寨-1.64MB/s(Youtube:不良林)
-      - 🇫🇷 法国-416.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-487.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-567.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-870.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
+      - 🇫🇷 法国-985.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
       - 捷克-1.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-539.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-245.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-615.8KB/s(Youtube:不良林)
-      - 柬埔寨-1.64MB/s(Youtube:不良林)
-      - 🇫🇷 法国-416.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-487.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-567.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-870.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
+      - 🇫🇷 法国-985.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
       - 捷克-1.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-539.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-245.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-615.8KB/s(Youtube:不良林)
-      - 柬埔寨-1.64MB/s(Youtube:不良林)
-      - 🇫🇷 法国-416.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-487.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-567.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-870.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
+      - 🇫🇷 法国-985.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
       - 捷克-1.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-539.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-245.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-615.8KB/s(Youtube:不良林)
-      - 柬埔寨-1.64MB/s(Youtube:不良林)
-      - 🇫🇷 法国-416.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-487.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-567.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-870.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
+      - 🇫🇷 法国-985.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
       - 捷克-1.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-539.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
