--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.19MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-349.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.07MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-985.6KB/s(Youtube:不良林), server: 54.36.174.181, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇯🇵 日本-1.96MB/s(Youtube:不良林), server: 85.208.108.59, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇫🇷 法国-1.07MB/s(Youtube:不良林), server: 54.36.174.181, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 捷克-1.37MB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
-  - {name: 🇦🇺 澳大利亚-1.91MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
-  - {name: 🇺🇸 美国-2.96MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-984.1KB/s(Youtube:不良林), server: 54.36.174.181, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇭🇰 (已存活2天)香港-3.95MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇯🇵 日本-174.2KB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇨🇳 中国-3.08MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇫🇷 法国-539.9KB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇳 中国-2.72MB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
+  - {name: 🇫🇷 法国-1.23MB/s(Youtube:不良林), server: 54.36.174.181, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇸🇬 新加坡-327.6KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-812.8KB/s(Youtube:不良林), server: 54.36.174.181, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇫🇷 法国-985.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
-      - 捷克-1.37MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-984.1KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-174.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇫🇷 法国-539.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-327.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-812.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇫🇷 法国-985.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
-      - 捷克-1.37MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-984.1KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-174.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇫🇷 法国-539.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-327.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-812.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇫🇷 法国-985.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
-      - 捷克-1.37MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-984.1KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-174.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇫🇷 法国-539.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-327.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-812.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活2天)香港-3.95MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇫🇷 法国-985.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
-      - 捷克-1.37MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-984.1KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-174.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇫🇷 法国-539.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-327.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-812.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇫🇷 法国-985.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
-      - 捷克-1.37MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-984.1KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-174.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇫🇷 法国-539.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-327.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-812.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇫🇷 法国-985.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
-      - 捷克-1.37MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-984.1KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-174.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇫🇷 法国-539.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-327.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-812.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇫🇷 法国-985.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.96MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
-      - 捷克-1.37MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇫🇷 法国-984.1KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-174.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
       - 🇫🇷 法国-539.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-327.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-812.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
